优化 GitHub Actions 配置以支持完整的 git 历史拉取，并在构建过程中添加对浅层克隆的警告

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # 拉取完整的 git 历史，以便 build.js 能查询提交时间
       - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
