--- a/package.json
+++ b/package.json
@@ -11,16 +11,26 @@
   },
   "dependencies": {
     "fast-glob": "^3.3.2",
+    "formidable": "^3.5.4",
     "fs-extra": "^11.2.0",
-    "nunjucks": "^3.2.4",
-    "minisearch": "^7.1.2",
-    "scratchblocks": "github:LuYifei2011/scratchblocks#release",
     "html-minifier-next": "^4.1.1",
+    "minisearch": "^7.1.2",
+    "nunjucks": "^3.2.4",
+    "scratchblocks": "github:LuYifei2011/scratchblocks#release",
     "simple-git": "^3.22.0"
   },
   "devDependencies": {
-    "prettier": "^3.3.3",
+    "@codemirror/autocomplete": "^6.20.0",
+    "@codemirror/commands": "^6.10.0",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/language": "^6.11.3",
+    "@codemirror/lint": "^6.9.2",
+    "@codemirror/search": "^6.5.11",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.38.8",
+    "@lezer/highlight": "^1.2.3",
     "chokidar": "^3.6.0",
+    "prettier": "^3.3.3",
     "selfsigned": "^2.4.1"
   }
 }
