--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "node ./scripts/build.js",
     "dev": "node ./scripts/dev-server.js",
     "dev:https": "powershell -NoProfile -Command \"$env:HTTPS='1'; node ./scripts/dev-server.js\"",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "format:scripts": "node ./scripts/format-scratchblocks.js --all"
   },
   "dependencies": {
     "fast-glob": "^3.3.2",
