--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -13,14 +13,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.ref }}
-          token: ${{ github.token }}
+          ref: ${{ github.head_ref }}
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: "npm"
+          cache: 'npm'
 
       - name: Install
         run: npm ci
@@ -34,7 +33,5 @@ jobs:
       - name: Commit
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Format code and scratchblocks scripts"
+          commit_message: 'Format code and scratchblocks scripts'
           branch: ${{ github.head_ref }}
-          skip_fetch: false
-          skip_checkout: false
